[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/baum/skillTree/oben6.png" type="Texture" id=1]
[ext_resource path="res://assets/baum/skillTree/links1.png" type="Texture" id=2]
[ext_resource path="res://assets/baum/skillTree/oben5.png" type="Texture" id=3]
[ext_resource path="res://assets/baum/skillTree/links2.png" type="Texture" id=4]
[ext_resource path="res://assets/baum/skillTree/links3.png" type="Texture" id=5]
[ext_resource path="res://assets/baum/skillTree/links4.png" type="Texture" id=6]
[ext_resource path="res://assets/baum/skillTree/oben_links4.png" type="Texture" id=7]
[ext_resource path="res://assets/baum/skillTree/oben_links5.png" type="Texture" id=8]
[ext_resource path="res://assets/baum/skillTree/oben1.png" type="Texture" id=9]
[ext_resource path="res://assets/baum/skillTree/oben2.png" type="Texture" id=10]
[ext_resource path="res://assets/baum/skillTree/oben3.png" type="Texture" id=11]
[ext_resource path="res://assets/baum/skillTree/oben4.png" type="Texture" id=12]
[ext_resource path="res://assets/baum/skillTree/oben0.png" type="Texture" id=13]
[ext_resource path="res://assets/baum/skillTree/stamm1.png" type="Texture" id=14]
[ext_resource path="res://assets/baum/skillTree/stamm2.png" type="Texture" id=15]
[ext_resource path="res://assets/baum/skillTree/stamm3.png" type="Texture" id=16]
[ext_resource path="res://assets/baum/skillTree/stamm4.png" type="Texture" id=17]
[ext_resource path="res://assets/baum/skillTree/oben_links1.png" type="Texture" id=18]
[ext_resource path="res://assets/baum/skillTree/oben_links2.png" type="Texture" id=19]
[ext_resource path="res://assets/baum/skillTree/oben_links3.png" type="Texture" id=20]
[ext_resource path="res://assets/baum/skillTree/stamm5.png" type="Texture" id=21]
[ext_resource path="res://Scripts/skilltree.gd" type="Script" id=22]
[ext_resource path="res://assets/baum/skillTree/links5.png" type="Texture" id=23]
[ext_resource path="res://assets/baum/skillTree/links6.png" type="Texture" id=24]
[ext_resource path="res://Scenes/skill_point.tscn" type="PackedScene" id=25]

[node name="Node2D" type="Node2D"]
script = ExtResource( 22 )

[node name="Node" type="Node" parent="."]

[node name="1_stamm" type="Node" parent="Node"]

[node name="Stamm0" type="Sprite" parent="Node/1_stamm"]
position = Vector2( -81, -384.5 )
z_index = -5
texture = ExtResource( 14 )

[node name="Stamm1" type="Sprite" parent="Node/1_stamm"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 15 )

[node name="Stamm2" type="Sprite" parent="Node/1_stamm"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 16 )

[node name="Stamm3" type="Sprite" parent="Node/1_stamm"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 17 )

[node name="Stamm4" type="Sprite" parent="Node/1_stamm"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 21 )

[node name="2_astLinks" type="Node" parent="Node"]

[node name="Links0" type="Sprite" parent="Node/2_astLinks"]
position = Vector2( -81, -384.5 )
z_index = -5
texture = ExtResource( 2 )

[node name="Links1" type="Sprite" parent="Node/2_astLinks"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 4 )

[node name="Links2" type="Sprite" parent="Node/2_astLinks"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 5 )

[node name="Links3" type="Sprite" parent="Node/2_astLinks"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 6 )

[node name="Links4" type="Sprite" parent="Node/2_astLinks"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 23 )

[node name="Links5" type="Sprite" parent="Node/2_astLinks"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 24 )

[node name="3_oben" type="Node" parent="Node"]

[node name="Oben0" type="Sprite" parent="Node/3_oben"]
position = Vector2( -81, -384.5 )
z_index = -5
texture = ExtResource( 13 )

[node name="Oben1" type="Sprite" parent="Node/3_oben"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 9 )

[node name="Oben2" type="Sprite" parent="Node/3_oben"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 10 )

[node name="Oben3" type="Sprite" parent="Node/3_oben"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 11 )

[node name="Oben4" type="Sprite" parent="Node/3_oben"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 12 )

[node name="Oben5" type="Sprite" parent="Node/3_oben"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 3 )

[node name="Oben6" type="Sprite" parent="Node/3_oben"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 1 )

[node name="4_ast_rechts" type="Node" parent="Node"]

[node name="ObenLinks0" type="Sprite" parent="Node/4_ast_rechts"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 18 )

[node name="ObenLinks1" type="Sprite" parent="Node/4_ast_rechts"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 19 )

[node name="ObenLinks2" type="Sprite" parent="Node/4_ast_rechts"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 20 )

[node name="ObenLinks3" type="Sprite" parent="Node/4_ast_rechts"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 7 )

[node name="ObenLinks4" type="Sprite" parent="Node/4_ast_rechts"]
visible = false
position = Vector2( -90, -385 )
z_index = -5
texture = ExtResource( 8 )

[node name="punkte" type="Node" parent="Node"]

[node name="skill_point" parent="Node/punkte" instance=ExtResource( 25 )]
visible = false
position = Vector2( -8, -27 )
__meta__ = {
"_editor_description_": ""
}
beschreibungs_text = "plus 20 nährstoffe"
kosten_nerstoffe = -20

[node name="skill_point01" parent="Node/punkte/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -43, -46 )
links = true
beschreibungs_text = "zerstöre einen Stein mehr"
type = 1
ast = 101

[node name="skill_point" parent="Node/punkte/skill_point/skill_point01" instance=ExtResource( 25 )]
visible = false
position = Vector2( -29, -25 )
links = true
beschreibungs_text = "zerstöre einen Stein mehr"
type = 1
ast = 102

[node name="skill_point" parent="Node/punkte/skill_point/skill_point01/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -53, -32 )
links = true
oben = true
beschreibungs_text = "zerstöre einen Stein mehr"
type = 1
ast = 103

[node name="skill_point" parent="Node/punkte/skill_point/skill_point01/skill_point/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -25, -44 )
links = true
oben = true
beschreibungs_text = "Sie erhalten Nährstoffe im Verhältnis zu den Wurzeln "
kosten_nerstoffe = -10
type = 4
ast = 104

[node name="skill_point2" parent="Node/punkte/skill_point/skill_point01/skill_point/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -54, -6 )
links = true
oben = true
beschreibungs_text = "zerstöre einen Stein mehr"
type = 1
ast = 104

[node name="skill_point" parent="Node/punkte/skill_point/skill_point01/skill_point/skill_point/skill_point2" instance=ExtResource( 25 )]
visible = false
position = Vector2( -54, -36 )
links = true
oben = true
beschreibungs_text = "zerstöre einen Stein mehr"
type = 1
ast = 105

[node name="skill_point02" parent="Node/punkte/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( 4, -90 )
oben = true
rechts = true
beschreibungs_text = "den Wasserverbrauch zu senken"
type = 2

[node name="skill_point21" parent="Node/punkte/skill_point/skill_point02" instance=ExtResource( 25 )]
visible = false
position = Vector2( -15, -118 )
links = true
oben = true
beschreibungs_text = "den Wasserverbrauch zu senken"
type = 2
ast = 201

[node name="skill_point" parent="Node/punkte/skill_point/skill_point02/skill_point21" instance=ExtResource( 25 )]
visible = false
position = Vector2( -38, -72 )
links = true
oben = true
beschreibungs_text = "den Wasserverbrauch zu senken"
type = 2
ast = 202

[node name="skill_point" parent="Node/punkte/skill_point/skill_point02/skill_point21/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( 11, -83 )
links = true
oben = true
beschreibungs_text = "den Wasserverbrauch zu senken"
kosten_nerstoffe = 15
type = 2
ast = 203

[node name="skill_point" parent="Node/punkte/skill_point/skill_point02/skill_point21/skill_point/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -121, 42 )
links = true
oben = true
beschreibungs_text = "den Wasserverbrauch zu senken"
type = 2
ast = 204

[node name="skill_point" parent="Node/punkte/skill_point/skill_point02/skill_point21/skill_point/skill_point/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -60, -79 )
links = true
oben = true
beschreibungs_text = "den Wasserverbrauch zu senken"
kosten_nerstoffe = 30
type = 2
ast = 205

[node name="skill_point22" parent="Node/punkte/skill_point/skill_point02" instance=ExtResource( 25 )]
visible = false
position = Vector2( 40, -96 )
rechts = true
beschreibungs_text = "Spielgeschwindigkeit redziren"
type = 3
ast = 300

[node name="skill_point" parent="Node/punkte/skill_point/skill_point02/skill_point22" instance=ExtResource( 25 )]
visible = false
position = Vector2( 21, -52 )
oben = true
rechts = true
beschreibungs_text = "Spielgeschwindigkeit redziren"
type = 3
ast = 301

[node name="skill_point" parent="Node/punkte/skill_point/skill_point02/skill_point22/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -20, -61 )
links = true
oben = true
rechts = true
beschreibungs_text = "Spielgeschwindigkeit redziren"
kosten_nerstoffe = 30
ast = 302

[node name="skill_point" parent="Node/punkte/skill_point/skill_point02/skill_point22/skill_point/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -6, -91 )
links = true
oben = true
rechts = true
beschreibungs_text = "Spielgeschwindigkeit redziren"
kosten_nerstoffe = 50
type = 3
ast = 304

[node name="skill_point" parent="Node/punkte/skill_point/skill_point02/skill_point22/skill_point/skill_point/skill_point" instance=ExtResource( 25 )]
visible = false
position = Vector2( -2, -89 )
oben = true
rechts = true
beschreibungs_text = "Spielgeschwindigkeit redziren"
kosten_nerstoffe = 100
type = 4
